kubernetes/production/apps/longhorn/longhorn/dashboard/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: longhorn-dashboard-basicauth
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: production-tls
